fixed scrollbar issue on about page when in mobile view

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -273,18 +273,18 @@ body {
 }
 #Container .steps {
   background-image: url(https://images.unsplash.com/photo-1572981872601-f290409c0bdc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-  height: 75vh;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: row;
+  padding: 1.5%;
 }
 @media (max-width: 500px) {
   #Container .steps {
     display: flex;
     flex-direction: column;
-    height: 680px;
   }
 }
 #Container .steps .stepsInfo {
@@ -295,6 +295,7 @@ body {
   text-align: center;
   margin: 2%;
   width: 100%;
+  padding: 2% 2%;
 }
 @media (max-width: 500px) {
   #Container .steps .stepsInfo {
@@ -314,7 +315,7 @@ body {
   }
 }
 #Container .steps .stepsInfo h3 {
-  font-size: 2.2rem;
+  font-size: 1.9rem;
   text-align: center;
   margin: 4%;
   background-color: darkviolet;
@@ -526,7 +527,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1%;
   }
 }
 .body .content-container .secondRow p {
