--- a/LESS/about.less
+++ b/LESS/about.less
@@ -7,9 +7,6 @@
      
    
      .content-container{
-        // width: 100%;
-        // margin: auto;
-
         margin-top: 5%;
         background-color:black;
         color: white;
@@ -117,7 +114,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 1%;
+            
         }//this closes media query
 
         
@@ -175,7 +172,7 @@
 img  {
     border-radius: 50%;
     // border: 3px solid white;
-    
+   
     width: 310px;
     
     
