--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -109,16 +109,19 @@
 
 .steps{
     background-image: url(https://images.unsplash.com/photo-1572981872601-f290409c0bdc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
-    height: 75vh;
+    width: 100%;
+    
       background-position: center; 
       background-repeat: no-repeat; 
       background-size: cover;
       display: flex;
       flex-direction: row;
+      padding: 1.5%;
       @media @mobile{
         display: flex;
         flex-direction: column;
-        height: 680px;
+       
+        // height: 750px;
     }//this closes media query for .steps
     
       
@@ -132,6 +135,7 @@
         text-align: center;
         margin: 2%;
         width: 100%;
+        padding: 2% 2%;
         @media @mobile{
             width: 97%;
             margin: 1.3%;
@@ -151,7 +155,7 @@
         
     }//this closes h2
     h3{
-        font-size: 2.2rem;
+        font-size: 1.9rem;
         text-align: center;
         margin: 4%;
         background-color:@darkviolet;
